Fix footer overlap and updated header and footertext colour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ body {
 header {
     background-color: #ff69b4;
     width: 100%;
+    color: white;
 }
 
 /* Nav bar */
@@ -60,6 +61,7 @@ a {
 main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
+    padding-bottom: 100px;
 }
 
 /* Barbie's creator */
@@ -134,6 +136,7 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
+    color: white;
 }
 
 
